<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<!-- 飛行姿勢(yaw) -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_trace_attitude_yaw"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:id="@+id/trace_flight_attitude_yaw_textview"
			android:textColor="@color/trace_config"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/trace_flight_attitude_yaw_seekbar"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- 飛行速度 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_trace_speed"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:id="@+id/trace_flight_speed_textview"
			android:textColor="@color/trace_config"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/trace_flight_speed_seekbar"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
		<!-- 高度制御 -->
		<Switch
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_trace_altitude_enable"
			android:textColor="@color/trace_config"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textOn="@string/config_sw_on"
			android:textOff="@string/config_sw_off"
			android:paddingBottom="@dimen/min_padding"
			android:id="@+id/trace_flight_altitude_enable_switch"/>
		<!-- 飛行高度 -->
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/trace_config_trace_altitude"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:id="@+id/trace_flight_altitude_textview"
			android:textColor="@color/trace_config"/>
		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/trace_flight_altitude_seekbar"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
	</LinearLayout>
</ScrollView>