<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout"
		android:weightSum="1">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/config_control_max"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:id="@+id/max_control_value_textview"
			android:textColor="@color/trace_config"/>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/max_control_value_seekbar"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/config_scale_x"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/scale_x_textview"/>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scale_seekbar_x"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/config_scale_y"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/scale_y_textview"/>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scale_seekbar_y"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/config_scale_z"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/scale_z_textview"/>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scale_seekbar_z"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/config_scale_r"
			android:textSize="@dimen/text_sz_trace_config_list"
			android:textColor="@color/trace_config"
			android:id="@+id/scale_r_textview"/>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scale_seekbar_r"
			android:paddingBottom="@dimen/min_padding"
			android:thumb="@drawable/custom_thumb"
			android:minHeight="@dimen/text_sz_trace_config_list"/>
	</LinearLayout>

</ScrollView>